--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ Plugins/*/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 
+# Ignore additional content packs
+Content/IndustryPropsPack6/*
