--- a/.gitignore
+++ b/.gitignore
@@ -74,4 +74,4 @@ Plugins/*/Intermediate/*
 DerivedDataCache/*
 
 # Ignore additional content packs
-Content/IndustryPropsPack6/*
+Content/IndustryPropsPack6/
